tdf#120562 , Selection of favorite character is not applied.

We need to do rView->GrabFocus() , before calling any other function.

Change-Id: I95a64f44c40070caa0064c3e73fb5d7b04b3bf4b